    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg1"
        tools:context=".Onboarding.WelcomeFragment">

        <ImageView
            android:id="@+id/imgIns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="-10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img1" />

        <LinearLayout
            android:id="@+id/layoutNextIns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNextIns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-medium"
                android:gravity="bottom|end"
                android:text="@string/nex"
                android:textColor="#FF8000"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textTitle3"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-250dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/desc1"
            android:textColor="#FF8000"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textDesc3"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:layout_marginTop="-1dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/uni"
            android:textColor="#FF8000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textDesc4"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:layout_marginTop="-1dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/ges"
            android:textColor="#FF8000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textPrevIns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom|start"
            android:text="@string/back"
            android:textColor="#000001"
            android:textSize="20sp" />

    </LinearLayout>