<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context=".Onboarding.dos">

    <ImageView
        android:id="@+id/imgIns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="-10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/bas"
            android:textColor="#FF8000"
            android:textSize="26sp" />
        <Button
            android:id="@+id/bBasica"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:layout_marginLeft="54dp"
            android:textColor="#ECE0F8"
            android:textSize="13sp"
            android:background="@drawable/btncir"/>

        <Button
            android:id="@+id/bBasica1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/btncir"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:text="@string/sel"
            android:textColor="#ECE0F8"
            android:textSize="13sp">
    </Button>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/cien"
                android:textColor="#FF8000"
                android:textSize="26sp" />

        <Button
            android:id="@+id/bnBasica2"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:background="@drawable/btncir"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:text="@string/desc"
            android:textColor="#ECE0F8"
            android:textSize="13sp">
        </Button>

        <Button
                android:id="@+id/bBasica4"
                android:layout_width="100dp"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content"
                android:text="@string/sel"
                android:fontFamily="monospace"
                android:paddingHorizontal="15dp"
                android:textColor="#ECE0F8"
                android:textSize="13sp"
                android:background="@drawable/btncir">
            </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:id="@+id/textTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/cien"
            android:textColor="#FF8000"
            android:textSize="26sp" />

        <Button
            android:id="@+id/bBasica3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:background="@drawable/btncir"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:text="@string/desc"
            android:textColor="#ECE0F8"
            android:textSize="13sp">
        </Button>

        <Button
            android:id="@+id/buttonSelectBasica"
            android:layout_width="100dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:text="@string/sel"
            android:fontFamily="monospace"
            android:paddingHorizontal="15dp"
            android:textColor="#ECE0F8"
            android:textSize="13sp"
            android:background="@drawable/btncir">
        </Button>

    </LinearLayout>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/sele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btncirbla"
        android:fontFamily="monospace"
        android:paddingHorizontal="15dp"
        android:text="@string/selap"
        android:textColor="#FF8000"
        android:textSize="28dp">
    </EditText>

    <EditText
android:id="@+id/use"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/user"
android:fontFamily="monospace"
android:paddingHorizontal="15dp"
android:textColor="#FF8000"
android:textSize="28dp"
android:background="@drawable/btncirbla">
</EditText>
    <Button
        android:id="@+id/ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingre"
        android:gravity="center"
        android:fontFamily="monospace"
        android:paddingHorizontal="15dp"
        android:textColor="#ECE0F8"
        android:textSize="13sp"
        android:background="@drawable/btncir">
    </Button>
</LinearLayout>
</LinearLayout>